# djmenu

./: pyproject.toml  requirements.txt
.github/workflows/: django.yml
