[tool.poetry]
name = "djmenu"
version = "0.1.0"
description = "A simple solution for restaurants and pizzerias."
authors = ["vitorpvcampos <vitor.campos@engenharia.ufjf.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.0.7"
pytz = "2020.1"
python-decouple = "3.3"
dj-database-url = "0.5.0"
psycopg2 = "2.8.5"
psycopg2-binary = "2.8.5"
django-heroku = "0.3.1"
gunicorn = "20.0.4"
whitenoise = "5.1.0"
django-qr-code = "1.2.0"
qrcode = "6.1"
six = "1.15.0"
certifi = "2020.6.20"
sentry-sdk = "0.15.1"
urllib3 = "1.25.9"
django-s3-folder-storage = "0.5"
wordpress-api = "1.2.9"

[tool.poetry.dev-dependencies]
pycodestyle = "2.6.0"
entrypoints = "0.3"
flake8 = "3.8.3"
mccabe = "0.6.1"
pyflakes = "2.2.0"
django-debug-toolbar = "2.2"
responses = "0.10.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
